trunk/Archive2/de/bd91223a3da684/output
main.cpp:5:5: error: 'const' type qualifier on return type has no effect [-Werror,-Wignored-qualifiers]
int const get()
    ^~~~~~
main.cpp:12:5: error: use of undeclared identifier 'stc'; did you mean 'std'?
    stc::cout << get();
    ^~~
    std
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:42:11: note: 'std' declared here
namespace std _GLIBCXX_VISIBILITY(default)
          ^
2 errors generated.
